--- a/registration.html
+++ b/registration.html
@@ -61,17 +61,17 @@
         <ul id="month" onchange="total()">
           <li>
             <label for="month_3">
-              <input type="radio" name="month" value="3" required>Thee Months (Reoccuring)
+              <input type="radio" name="month" value="3" required>Thee Months
             </label>
           </li>
           <li>
             <label for="month_6">
-              <input type="radio" name="month" value="6">Six Months (Reoccuring)
+              <input type="radio" name="month" value="6">Six Months
             </label>
           </li>
           <li>
             <label for="month_12">
-              <input type="radio" name="month" value="12">Twelve Months (Reoccuring)
+              <input type="radio" name="month" value="12">Twelve Months
             </label>          
           </li>
       </ul>
@@ -81,19 +81,19 @@
       <p>
         <label for="name">
           <span>Name: *</span>
-          <input type="text" id="username" placeholder="Fullname" name="username" required pattern="[A-Za-z]+" value="Jonathan Eastin">
+          <input type="text" id="username" placeholder="Fullname" name="username" required pattern="[A-Za-z]+">
         </label>
       </p>
       <p>
         <label for="mail">
           <span>E-mail: *</span>
-          <input type="email" id="mail" placeholder="Email Address" name="usermail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" value="j.d.east@icloud.com">
+          <input type="email" id="mail" placeholder="Email Address" name="usermail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
         </label>
       </p>
       <p>
         <label for="pwd">
           <span>Password: *</span>
-          <input type="password" id="pwd" placeholder="Password" name="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" value="Nabaali2">
+          <input type="password" id="pwd" placeholder="Password" name="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
         </label>
       </p>
 
@@ -117,13 +117,13 @@
       -->
       <p>
         <label for="number">Card number: *
-          <input type="tel" id="number" name="cardnumber" value="3714-496353-98431">
+          <input type="tel" id="number" name="cardnumber">
         </label>
       </p>
 
       <p>
         <label for="expiration">Expiration date: *
-          <input type="text" name="expiration" id="expiration" placeholder="MM/YY" required pattern="^(0[1-9]|1[0-2])\/([0-9]{2})$" value="01/23">
+          <input type="text" name="expiration" id="expiration" placeholder="MM/YY" required pattern="^(0[1-9]|1[0-2])\/([0-9]{2})$">
         </label>
       </p>
 
