accidentally remove the dummy cc num

--- a/registration.html
+++ b/registration.html
@@ -117,7 +117,7 @@
       -->
       <p>
         <label for="number">Card number: *
-          <input type="tel" id="number" name="cardnumber">
+          <input type="tel" id="number" name="cardnumber" value="3714-496353-98431">
         </label>
       </p>
 
