--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="assests/js/modernizr.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
   <script src="assests/js/index.js"></script>
+  <script src="assests/js/app.js" async></script>
 </head>
 <body>
   <header>
@@ -35,6 +36,139 @@
     <br><br>
     Nothing is as scary as coming across a <span class="underline italic">Cobra</span> in the dark. And nothing strikes near as fast as <span class="underline italic">yours</span> will…</p>
   </article>
+
+  <form id="form">
+    
+    <h1>Payment form</h1>
+    <p>Required fields are followed by *.</p>
+
+    <section>
+      <h2>Contact information</h2>
+      <fieldset>
+        <legend>Tier: *</legend>
+        <ul id="tier" onchange="total()">
+          <li>
+            <label for="tier_3">
+              <input type="radio" name="tier" value="0" required checked>Naja (Hobbyist)
+            </label>
+          </li>
+          <li>
+            <label for="tier_2">
+              <input type="radio" name="tier" value="16">Rinkhal (Small Business)
+            </label>
+          </li>
+          <li>
+            <label for="tier_1">
+              <input type="radio" name="tier" value="32">Hamadryad (Ecommerce)
+            </label>
+          </li>
+        </ul>
+      </fieldset>
+
+      <fieldset>
+        <legend>Duration: *</legend>
+        <ul id="month" onchange="total()">
+          <li>
+            <label for="month_3">
+              <input type="radio" name="month" value="3" required checked>Thee Months
+            </label>
+          </li>
+          <li>
+            <label for="month_6">
+              <input type="radio" name="month" value="6">Six Months
+            </label>
+          </li>
+          <li>
+            <label for="month_12">
+              <input type="radio" name="month" value="12">Twelve Months
+            </label>
+          </li>
+      </ul>
+      </fieldset>
+
+      <fieldset>
+        <div>
+          <input type="checkbox" id="firstOpt" name="option" value="JIRA">
+          <label for="firstOpt">Free JIRA team membership</label>
+        </div>
+        <div>
+          <input type="checkbox" id="secondOpt" name="option" value="Server priority">
+          <label for="secondOpt">Priority server access</label>
+        </div>
+        <div>
+          <input type="checkbox" id="thirdOpt" name="option" value="24/7 support">
+          <label for="thirdOpt">24/7 Support</label>
+        </div>
+        <div>
+          <input type="checkbox" id="fourthOpt" name="option" value="Security against XXS attacks">
+          <label for="fourthOpt">Security against XXS attacks</label>
+        </div>
+        <div>
+          <input type="checkbox" id="fifthOpt" name="option" value="200G db">
+          <label for="fifthOpt">Additional 200gb database</label>
+        </div>
+      </fieldset>
+
+      <p>
+        <label for="name">
+          <span>Name: *</span>
+          <input type="text" id="username" placeholder="Fullname" name="username" required pattern="[A-Za-z]+" value="Jon">
+        </label>
+      </p>
+      <p>
+        <label for="mail">
+          <span>E-mail: *</span>
+          <input type="email" id="mail" placeholder="Email Address" name="usermail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" value="j.d.east@icloud.com">
+        </label>
+      </p>
+      <p>
+        <label for="pwd">
+          <span>Password: *</span>
+          <input type="password" id="pwd" placeholder="Password" name="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" value="12345">
+        </label>
+      </p>
+
+    </section>
+
+    <section>
+      <h2>Payment information</h2>
+      <p>
+        <label for="card">Card:
+          <select id="card" name="usercard">
+            <option disabled selected value="blank"> -- select an option -- </option>
+            <option value="amex" selected>Amex</option>
+            <option value="mc">MasterCard</option>
+            <option value="visa">Visa</option>
+          </select>
+        </label>
+      </p>
+
+      <!-- Fake card numbers for each selection below
+        Visa card: 4569-4039-6101-4710, MasterCard: 5191-9149-4215-7165, Amex: 3714-496353-98431 
+      -->
+      <p>
+        <label for="number">Card number: *
+          <input type="tel" id="number" name="cardnumber" value="3714-496353-98431">
+        </label>
+      </p>
+
+      <p>
+        <label for="expiration">Expiration date: *
+          <input type="text" name="expiration" id="expiration" placeholder="MM/YY" required pattern="^(0[1-9]|1[0-2])\/([0-9]{2})$" value="01/23">
+        </label>
+      </p>
+
+      <p id="write">Total amount.</p>
+
+      <button id="makeOrder" type="button">Validate the payment</button>
+    </section>
+
+  </form>
+
+  <section id="display">
+    <h2>Your Orders:</h2>
+    <p id="showOrder"></p>
+  </section>
 
   <article class="index blog">
     <h2>Tutorial - Intermediate JavaScript Functions</h2>
