finished user validation

--- a/index.html
+++ b/index.html
@@ -112,21 +112,18 @@
       <p>
         <label for="name">
           <span>Name: *</span>
-          <p class = "errorMessage top-arrow"></p>
-          <input type="text" id="username" name="username" placeholder="Firstname and Lastname" required>
+          <input type="text" id="username" name="username" placeholder="Firstname Lastname" required>
         </label>
       </p>
       <p>
         <label for="mail">
           <span>E-mail: *</span>
-          <p class = "errorMessage top-arrow"></p>
           <input type="email" id="mail" placeholder="Email Address" name="usermail" required>
         </label>
       </p>
       <p>
         <label for="pwd">
           <span>Password: *</span>
-          <p class = "errorMessage top-arrow"></p>
           <input type="password" id="pwd" placeholder="Password" name="password" required>
         </label>
       </p>
@@ -146,8 +143,11 @@
       </p>
 
       <!-- Fake card numbers for each selection below
-        Visa card: 4569-4039-6101-4710, MasterCard: 5191-9149-4215-7165, Amex: 3714-496353-98431 
+        Visa card: 4569-4039-6101-4710,
+        MasterCard: 5191-9149-4215-7165,
+        Amex: 3714-496353-98431
       -->
+      
       <p>
         <label for="number">Card number: *
           <input type="tel" id="number" name="cardnumber" value="3714-496353-98431">
