added jquery to page per assignment 12

--- a/index.html
+++ b/index.html
@@ -39,13 +39,19 @@
     Nothing is as scary as coming across a <span class="underline italic">Cobra</span> in the dark. And nothing strikes near as fast as <span class="underline italic">yours</span> will…</p>
   </article>
   
-  <article class="index">
+  <!-- <article class="index">
     <button onclick="loadInformation()">Find Xur's Location</button>
     <div>
       <h2 id="location"></h2>
       <ul id="unordered">
       </ul>
     </div>
+  </article> -->
+
+  <article class="index blog">
+    <h2>Link to Assignment</h2>
+    <p>Here is the link to <a href="registration.html"><strong>Assignment 12</strong></a></p>
+    <p>Much of the selectors were changed to jQuery stand selectors with createDisplay being done using the jQuery .text() method.</p>
   </article>
 
   <article class="index blog">
