--- a/services.html
+++ b/services.html
@@ -8,9 +8,8 @@
   <link rel="stylesheet" type="text/css" href="assests/css/stylesheet.css">
   <link rel="icon" type="image/png" href="assests/images/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="assests/images/favicon-16x16.png" sizes="16x16">
-  <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300&family=Oswald:wght@700&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300&family=Oswald:wght@700&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
   <script src="assests/js/modernizr.min.js"></script>
-  <script src="assests/js/app.js" async></script>
 </head>
 <body>
   <header>
@@ -26,7 +25,7 @@
   <article class="column" id="tier_1">
     <img src="assests/images/tier_1.svg" alt="Tier 1 Package">
     <h2>Ecommerce</h2>
-    <button id="price1" onclick="showTotal(event)">Show Price</button>
+    <button id="price1">$0/month</button>
     <ul>
       <li class="included">Domain registration</li>
       <li class="included">Static webpage hosting</li>
@@ -45,7 +44,7 @@
   <article class="column" id="tier_2" >
     <img src="assests/images/tier_2.svg" alt="Tier 2 Package">
     <h2>Small Business</h2>
-    <button id="price2" onclick="showTotal(event)">Show Price</button>
+    <button id="price2">$16/month</button>
     <ul>
       <li class="included">Domain registration</li>
       <li class="included">Shared server hosting</li>
@@ -64,7 +63,7 @@
   <article class="column" id="tier_3" >
     <img src="assests/images/tier_3.svg" alt="Tier 3 Package">
     <h2>Hobbyist</h2>
-    <button id="price3" onclick="showTotal(event)">Show Price</button>
+    <button id="price3">$32/month</button>
     <ul>
       <li class="included">Domain registration</li>
       <li class="included">Shared server hosting</li>
